--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -1,7 +1,20 @@
 .div-body {
     width: 100%;
-    height: 1500px;
+    /* height: 1500px; */
     background-image: url("../../imges/web 1.jpg");
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+}
+
+.bady-page {
+    width: 700px;
+    max-width: 95%;
+    height: 800px;
+    background-color: #ffffffd7;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
