--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,10 +2,17 @@
     height: 100px;
     width: 100%;
     background-color: rgb(1, 1, 2);
+    font-family: "Andale Mono, monospace";
     display: flex;
     text-align: center;
     justify-content: center;
-    font-family: "Andale Mono, monospace";
+}
+.div-header-max-width {
+    width: 700px;
+    max-width: 95%;
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
 }
 
 .div-img-header {
@@ -14,12 +21,13 @@
 
 .div-img-header img{
     height: 100px;
-    /* border-collapse: initial; */
+    border-radius: 10px;
 }
 
 .div-h2-header {
     margin-right: 30%;
     padding-top: 20px;
+    padding-left: 20px;
 }
 
 .div-h2-header h2 {
