--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -12,9 +12,10 @@
 .bady-page {
     width: 700px;
     max-width: 95%;
-    height: 800px;
+    min-height: 200px;
     background-color: #ffffffd7;
     border-radius: 20px;
     margin-top: 10px;
     margin-bottom: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
