--- a/src/components/Body/Components/DetailBlockWindow.css
+++ b/src/components/Body/Components/DetailBlockWindow.css
@@ -1,6 +1,34 @@
 .div-detail-block-window {
-    display: inline-block;
-    background-color: white;
-    height: 100%;
-    width: 100%;
+    width: 700px;
+    max-width: 95%;
+    min-height: 200px;
+    background-color: #ffffffd7;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+}
+
+.p-detail-block-window {
+    margin: 0px;
+    text-align: left;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: rgba(255, 255, 255, 0.774);
+    width: fit-content;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    /* border-radius: 20px; */
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.div-img-detail-block-window img{
+    height: 200px;
+    border-radius: 10px;
+    margin-bottom: 15px;
 }
