--- a/src/components/Body/Components/DetailBlockWindow.css
+++ b/src/components/Body/Components/DetailBlockWindow.css
@@ -32,3 +32,26 @@
     border-radius: 10px;
     margin-bottom: 15px;
 }
+
+/* X Button */
+.div-detail-block-x {
+  position: fixed;
+  margin-left: 15px;
+  background-color: white;
+  color: black;
+  height: 30px;
+  width: 30px;
+  border-radius: 50px;
+  cursor: pointer;
+  font-size: 300;
+  font-weight: bold;
+  vertical-align: middle;
+  line-height: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.div-detail-block-x:hover {
+  background-color: red;
+  color: white;
+  transform: scale(1.2);
+}
