--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,19 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.white-diameter-around-the-circle {
+    background-color: rgba(255, 255, 255, 0.774);
+    border-radius: 10px;
+    /* width: fit-content; */
+    width: fit-content;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: space-around;
+}
