--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -20,6 +20,11 @@
     padding-bottom: 15px;
 }
 
+.bady-Education-top {
+    border-bottom: 1px dotted #999999;
+    padding-bottom: 15px;
+}
+
 .dive-bady-work-experience {
     width: 100%;
     border-top: 1px dotted #999999;
@@ -27,4 +32,64 @@
 
 .div-display-work-experience {
     padding-top: 15px;
+}
+
+.dive-bady-work-experience h3 {
+    margin-bottom: 0;
+}
+
+.dive-bady-skills {
+    border-top: 1px dotted #999999;
+
+}
+
+.dive-bady-skills h3{
+    margin-bottom: 0px;
+}
+
+.div-RavTech-box h5{
+    margin-bottom: 8px;
+    margin-top: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.div-RavTech-box button{
+    border-radius: 8px;
+    /* height: 28px; */
+    width: 150px;
+    display:inline-block;
+    padding: 2px;
+    margin: 5px;
+    border: 0.1em solid rgb(0, 0, 78);
+    color: rgb(0, 0, 78);
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    background-color: #FFFFFF;
+    text-align: center;
+    transition: all 0.15s;
+    
+}
+
+.div-RavTech-box button:hover{
+    text-shadow: 0 0 2em rgba(255,255,255,1);
+    color:#FFFFFF;
+    border-color:#FFFFFF;
+    background-color:  rgb(0, 0, 78);
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(128, 128, 128, 0.733);
+    cursor: pointer;
+}
+
+.div-RavTech-box button:checked{
+    text-shadow: 0 0 2em rgba(255,255,255,1);
+    color:#FFFFFF;
+    border-color:#FFFFFF;
+    background-color:  rgb(0, 0, 78);
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(128, 128, 128, 0.733);
+    cursor: pointer;
 }
