--- a/src/components/Body/Components/WorkExperienceWindow.css
+++ b/src/components/Body/Components/WorkExperienceWindow.css
@@ -20,3 +20,53 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
+
+.work-experience-company-name-button {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+    margin-top: 20px;
+}
+.work-experience-company-name-button h4 {
+    margin: 0px;
+}
+
+.work-experience-company-name-button button{
+    border-radius: 8px;
+    /* height: 28px; */
+    width: 150px;
+    display:inline-block;
+    padding: 2px;
+    margin: 5px;
+    border: 0.1em solid rgb(0, 0, 78);
+    color: rgb(0, 0, 78);
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    background-color: #FFFFFF;
+    text-align: center;
+    transition: all 0.15s;
+    
+}
+
+.work-experience-company-name-button button:hover{
+    text-shadow: 0 0 2em rgba(255,255,255,1);
+    color:#FFFFFF;
+    border-color:#FFFFFF;
+    background-color:  rgb(0, 0, 78);
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(128, 128, 128, 0.733);
+    cursor: pointer;
+}
+
+.work-experience-company-name-button button:checked{
+    text-shadow: 0 0 2em rgba(255,255,255,1);
+    color:#FFFFFF;
+    border-color:#FFFFFF;
+    background-color:  rgb(0, 0, 78);
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(128, 128, 128, 0.733);
+    cursor: pointer;
+}
